@@ -2,8 +2,9 @@
 <h1 align="center">Datalevin</h1>
 <p align="center"> 🧘 Simple, fast and versatile Datalog database for everyone 💽 </p>
 <p align="center">
+<a href="https://cljdoc.org/d/datalevin/datalevin"><img src="https://cljdoc.org/badge/datalevin/datalevin" alt="datalevin on cljdoc"></img></a>
 <a href="https://clojars.org/datalevin"><img src="https://img.shields.io/clojars/v/datalevin.svg?color=success" alt="datalevin on clojars"></img></a>
-<a href="https://github.com/juji-io/datalevin/actions"><img src="https://github.com/juji-io/datalevin/actions/workflows/release.binaries.yml/badge.svg?branch=0.6.15" alt="datalevin linux/macos build status"></img></a>
+<a href="https://github.com/juji-io/datalevin/actions"><img src="https://github.com/juji-io/datalevin/actions/workflows/release.binaries.yml/badge.svg?branch=0.6.29" alt="datalevin linux/macos build status"></img></a>
 <a href="https://ci.appveyor.com/project/huahaiy/datalevin"><img src="https://ci.appveyor.com/api/projects/status/github/juji-io/datalevin?svg=true" alt="datalevin windows build status"></img></a>
 
 </p>
@@ -88,272 +89,10 @@ Presentation:
 
 * [2020 London Clojurians Meetup](https://youtu.be/-5SrIUK6k5g)
 
-## :truck: Installation
+## :truck: [Installation](doc/install.md)
 
-Datalevin can be installed with different methods, depending on how you plan to use it.
-
-### Clojure Library
-
-The core of Datalevin is a Clojure library, simply add it to your project as a dependency
-and start using it!
-
-If you use [Leiningen](https://leiningen.org/) build tool, add this to the
-`:dependencies` section of your `project.clj` file:
-
-```Clojure
-[datalevin "0.6.15"]
-```
-
-If you use [Clojure CLI](https://clojure.org/guides/deps_and_cli) and
-`deps.edn`, declare the dependency like so:
-
-```Clojure
-{:deps {datalevin/datalevin {:mvn/version "0.6.15"}
-        com.cognitect/transit-clj {:mvn/version "1.0.329"}}}
-```
-
-This JVM library supports Java 8 and above. For **JVM version newer than 11**, you may want to add the following JVM options:
-```
---add-opens=java.base/java.nio=ALL-UNNAMED
---add-opens=java.base/sun.nio.ch=ALL-UNNAMED
-```
-Or you will get errors such as "Could not initialize class org.lmdbjava.ByteBufferProxy".
-
-
-#### GraalVM Native Image
-
-If your application depends on the Datalevin library and you want to compile your
-application to a GraalVM native image, put `org.clojars.huahaiy/datalevin-native`
-instead  (they have the same version number) in your `project.clj` or `deps.edn` file.
-
-This is necessary because `datelevin-native` artifact contains GraalVM specific
-code that should not appear in a regular JVM library. See also this
-[note](https://github.com/juji-io/datalevin/tree/master/native#compiling-datalevin-dependency-to-native-image).
-
-### Command Line Tool
-
-A command line tool [`dtlv`](https://github.com/juji-io/datalevin/blob/master/doc/dtlv.md) is built to work with Datalevin databases in shell
-scripting, doing work such as database backup/compaction, data import/export,
-query/transaction execution, server administration, and so on. The same binary
-can also run as a Datalevin server. This tool also includes a REPL with a Clojure
-interpreter, in addition to support all the database functions.
-
-Unlike many other database software (e.g. SQLite, Postgres, etc.) that introduces
-a separate language for the command line, the same Clojure
-code works in both Datalevin library and Datalevin command line tool.
-
-A native Datalevin is built by compiling into [GraalVM native
-image](https://www.graalvm.org/reference-manual/native-image/). In addition to
-fast startup times, it should also have better index access speed, for the
-native image version does not incur JNI overhead and uses a comparator written
-in C, see [blog
-post](https://yyhh.org/blog/2021/02/writing-c-code-in-javaclojure-graalvm-specific-programming/).
-
-Here is how to get the Datalevin command line tool:
-
-#### MacOS and Linux Package
-
-Install using [homebrew](https://brew.sh/)
-
-```console
-brew install huahaiy/brew/datalevin
-```
-
-#### Windows Package
-
-Install using [scoop](https://scoop.sh/)
-
-```console
-# Note: if you get an error you might need to change the execution policy (i.e. enable Powershell) with
-# Set-ExecutionPolicy RemoteSigned -scope CurrentUser
-Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
-
-scoop bucket add scoop-clojure https://github.com/littleli/scoop-clojure
-scoop bucket add extras
-scoop install datalevin
-```
-
-#### Docker
-
-```console
-docker pull huahaiy/datalevin
-```
-See [README on Docker hub](https://hub.docker.com/r/huahaiy/datalevin) for usage.
-
-#### Direct Download
-
-Or download the executable binary from github:
-
-* [Linux](https://github.com/juji-io/datalevin/releases/download/0.6.15/dtlv-0.6.15-ubuntu-latest-amd64.zip)
-  on x86-64 (AMD64)
-* [MacOS](https://github.com/juji-io/datalevin/releases/download/0.6.15/dtlv-0.6.15-macos-latest-amd64.zip)
-  on x86-64 (AMD64)
-* [Windows](https://github.com/juji-io/datalevin/releases/download/0.6.15/dtlv-0.6.15-windows-amd64.zip) on x86-64 (AMD64)
-
-Unzip, put it on your path, and execute `dtlv help`:
-
-```console
-  Datalevin (version: 0.6.15)
-
-Usage: dtlv [options] [command] [arguments]
-
-Commands:
-  copy  Copy a database, regardless of whether it is now in use
-  drop  Drop or clear a database
-  dump  Dump the content of a database to standard output
-  exec  Execute database transactions or queries
-  help  Show help messages
-  load  Load data from standard input into a database
-  repl  Enter an interactive shell
-  serv  Run as a server
-  stat  Display statistics of database
-
-Options:
-  -a, --all                            Include all of the sub-databases
-  -c, --compact                        Compact while copying
-  -d, --dir PATH                       Path to the database directory
-  -D, --delete                         Delete the sub-database, not just empty it
-  -f, --file PATH                      Path to the specified file
-  -g, --datalog                        Dump/load as a Datalog database
-  -h, --help                           Show usage
-  -l, --list                           List the names of sub-databases instead of the content
-  -p, --port PORT  8898                Listening port number
-  -r, --root ROOT  /var/lib/datalevin  Server root data directory
-  -v, --verbose                        Show verbose server debug log
-  -V, --version                        Show Datalevin version and exit
-
-Type 'dtlv help <command>' to read about a specific command.
-
-```
-
-
-Starting `dtlv` without any arguments goes into the console:
-
-```console
-  Datalevin (version: 0.6.15)
-
-  Type (help) to see available functions. Some Clojure core functions are also available.
-  Type (exit) to exit.
-
-user> (help)
-
-In addition to some Clojure core functions, the following functions are available:
-
-In namespace datalevin.core
-
-add                   add-doc               clear                 clear-dbi
-close                 close-db              close-kv              closed-kv?
-closed?               commit                conn-from-datoms      conn-from-db
-conn?                 copy                  create-conn           datom
-datom-a               datom-e               datom-v               datom?
-datoms                db                    db?                   dir
-doc-count             doc-indexed?          doc-refs              drop-dbi
-empty-db              entid                 entity                entity-db
-entries               get-conn              get-first             get-range
-get-some              get-value             hexify-string         index-range
-init-db               k                     list-dbis             listen!
-new-search-engine     open-dbi              open-kv               opts
-pull                  pull-many             put-buffer            q
-range-count           range-filter          range-filter-count    read-buffer
-remove-doc            reset-conn!           resolve-tempid        retract
-rseek-datoms          schema                search                search-index-writer
-seek-datoms           stat                  tempid                touch
-transact              transact!             transact-async        transact-kv
-unhexify-string       unlisten!             update-schema         v
-visit                 with-conn             write
-
-In namespace datalevin.interpret
-
-definterfn            exec-code             inter-fn              inter-fn-from-reader
-inter-fn?             load-edn
-
-In namespace datalevin.client
-
-assign-role           close-database        create-database       create-role
-create-user           disconnect-client     drop-database         drop-role
-drop-user             grant-permission      list-databases        list-databases-in-use
-list-role-permissions list-roles            list-user-permissions list-user-roles
-list-users            new-client            open-database         query-system
-reset-password        revoke-permission     show-clients          withdraw-role
-
-Can call function without namespace: (<function name> <arguments>)
-
-Type (doc <function name>) to read documentation of the function
-
-user>
-
-```
-
-You may want to launch `dtlv` in `rlwrap` to get a better REPL experience.
-
-#### Uberjar
-
-A JVM
-[uberjar](https://github.com/juji-io/datalevin/releases/download/0.6.15/datalevin-0.6.15-standalone.jar)
-is downloadable to use as the command line tool. It is useful when one wants to
-run a Datalevin server and needs the efficiency of JVM's JIT, as GraalVM native
-image is AOT and not as efficient as JVM for long running programs, or when a
-pre-built native version is not available for your platform. For example,
-assuming your Java is newer than version 11:
-
-```console
-java --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED -jar datalevin-0.6.15-standalone.jar
-```
-This will start the Datalevin REPL.
-
-```console
-java --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/sun.nio.ch=ALL-UNNAMED -jar datalevin-0.6.15-standalone.jar serv -r /tmp/test-server
-```
-Will run the Datalevin server on default port 8898, with root data path at
-`/tmp/test-server`.
-
-### Babashka Pod
-
-The `dtlv` executable can also run as a
-[Babashka](https://github.com/babashka/babashka)
-[pod](https://github.com/babashka/pods). It is also possible to download
-Datalevin directly from [pod
-registry](https://github.com/babashka/pod-registry) within a Babashka script
-(not all versions are registered):
-
-```
-#!/usr/bin/env bb
-
-(require '[babashka.pods :as pods])
-(pods/load-pod 'huahaiy/datalevin "0.6.8")
-
-```
-
-For pod usage, an extra macro `defpodfn` is provided to define a custom function
-that can be used in a query, e.g.:
-
-```console
-$ rlwrap bb
-Babashka v0.7.6 REPL.
-Use :repl/quit or :repl/exit to quit the REPL.
-Clojure rocks, Bash reaches.
-
-user=> (require '[babashka.pods :as pods])
-nil
-user=> (pods/load-pod "dtlv")
-#:pod{:id "pod.huahaiy.datalevin"}
-user=>  (require '[pod.huahaiy.datalevin :as d])
-nil
-user=> (d/defpodfn custom-fn [n] (str "hello " n))
-#:pod.huahaiy.datalevin{:inter-fn custom-fn}
-user=> (d/q '[:find ?greeting :where [(custom-fn "world") ?greeting]])
-#{["hello world"]}
-user=> (def conn (d/get-conn "/tmp/bb-test"))
-#'user/conn
-user=> (d/transact! conn [{:name "hello"}])
-{:datoms-transacted 1}
-user=> (d/q '[:find ?n :where [_ :name ?n]] (d/db conn))
-#{["hello"]}
-user=> (d/close conn)
-nil
-user=>
-```
-The example above uses `dtlv` binary in the PATH.
+As a Clojure library, Datalevin is simple to add as a dependency to your Clojure
+project. There are also several other options. Please see details in [Installation Documentation](doc/install.md)
 
 ## :tada: Usage
 
@@ -361,7 +100,7 @@ Datalevin is aimed to be a versatile database.
 
 ### Use as a Datalog store
 
-In addition to [our API doc](https://juji-io.github.io/datalevin/index.html),
+In addition to [our API doc](https://cljdoc.org/d/datalevin/datalevin),
 since Datalevin has almost the same Datalog API as Datascript, which in turn has
 almost the same API as Datomic®, please consult the abundant tutorials, guides
 and learning sites available online to learn about the usage of Datomic® flavor
@@ -459,17 +198,41 @@ for EDN data.
 ;; => {:saying "So Long, and thanks for all the fish",
 ;;     :source "The Hitchhiker's Guide to the Galaxy"}
 
+
+;; Range query, from unix epoch time to now
+(d/get-range db date-table [:closed (Date. 0) (Date.)] :instant)
+;; => [[#inst "1989-11-09T00:00:00.000-00:00" "The fall of the Berlin Wall"]
+;;     [#inst "1991-12-25T00:00:00.000-00:00" "USSR broke apart"]]
+
+;; This returns a PersistentVector - e.g. reads all data in JVM memory
+(d/get-range db misc-table [:all])
+;; => [[42 {:saying "So Long, and thanks for all the fish",
+;;          :source "The Hitchhiker's Guide to the Galaxy"}]
+;;     [:datalevin "Hello, world!"]]
+
+;; This allows you to iterate over all DB keys inside a transaction.
+;; You can perform writes inside the transaction.
+;; kv is of of type https://www.javadoc.io/doc/org.lmdbjava/lmdbjava/latest/org/lmdbjava/CursorIterable.KeyVal.html
+;; Avoid long-lived transactions. Read transactions prevent reuse of pages freed by newer write transactions, thus the database can grow quickly.
+;; Write transactions prevent other write transactions, since writes are serialized.
+;; LMDB advice: http://www.lmdb.tech/doc/index.html
+;; Conclusion: It's ok to have long transactions if using a single thread.
+(d/visit db misc-table
+            (fn [kv]
+               (let [k (d/read-buffer (d/k kv) :data)]
+                  (when (= k 42)
+                    (d/transact-kv db [[:put misc-table 42 "Don't panic"]]))))
+              [:all])
+
+(d/get-range db misc-table [:all])
+;; => [[42 "Don't panic"] [:datalevin "Hello, world!"]]
+
 ;; Delete some data
 (d/transact-kv db [[:del misc-table 42]])
 
 ;; Now it's gone
 (d/get-value db misc-table 42)
 ;; => nil
-
-;; Range query, from unix epoch time to now
-(d/get-range db date-table [:closed (Date. 0) (Date.)] :instant)
-;; => [[#inst "1989-11-09T00:00:00.000-00:00" "The fall of the Berlin Wall"]
-;;     [#inst "1991-12-25T00:00:00.000-00:00" "USSR broke apart"]]
 
 ;; Close key value db
 (d/close-kv db)
@@ -567,7 +330,7 @@ lookup refs like `[:user/handle "eve"]`. If you'd like to help, feel free to rea
 ## :green_book: Documentation
 
 Please refer to the [API
-documentation](https://juji-io.github.io/datalevin/index.html) for more details.
+documentation](https://cljdoc.org/d/datalevin/datalevin) for more details.
 You may also consult online materials for Datascript or Datomic®, as the Datalog API is
 similar.
 
@@ -583,21 +346,21 @@ These are the tentative goals that we try to reach as soon as we can. We may
 adjust the priorities based on feedback.
 
 * 0.4.0 ~~Native image and native command line tool.~~ [Done 2021/02/27]
-* 0.5.0 ~~Native networked server mode with access control.~~ [Done 2021/09/06]
+* 0.5.0 ~~Native networked server mode with role based access control.~~ [Done 2021/09/06]
 * 0.6.0 ~~As a search engine: full-text search across database.~~ [Done 2022/03/10]
-* 0.7.0 A new Datalog query engine with improved performance.
-* 0.8.0 As a product rule engine: implement iterative rules application and
-  truth maintenance.
-* 1.0.0 First major release.
-* 1.1.0 Read-only replicas.
-* 1.2.0 Option to store data in compressed form.
-* 1.3.0 Arbitrary data as attribute.
-* 1.4.0 Composite tuples.
+* 0.7.0 Explicit transactions, lazy results loading, and results spill to disk
+  when memory is low.
+* 0.8.0 Tuples and composite tuples.
+* 0.9.0 A new Datalog query engine with improved performance.
+* 1.0.0 As a production rule engine: iterative rules application and truth maintenance.
+* 1.1.0 Transaction log storage and access API.
+* 1.2.0 Read-only replicas for server.
+* 1.3.0 Option to store data in compressed form.
+* 1.4.0 Arbitrary data as attribute.
 * 1.5.0 Fully automatic schema migration on write.
-* 2.0.0 Second major release.
+* 2.0.0 Distributed mode with raft based replication.
 * 3.0.0 As a document store: automatic indexing.
 * 4.0.0 As a graph database: implementing [loom](https://github.com/aysylu/loom) graph protocols.
-* 5.0.0 Distributed mode with raft based replication.
 
 
 ## :rocket: Status
@@ -651,7 +414,7 @@ than just the difference in data durability and running mode:
 
 * Respects `:db/valueType`. Currently, most [Datomic® value
   types](https://docs.datomic.com/on-prem/schema.html#value-types) are
-  supported, except bigint, bigdec, uri and tuple. Values of the attributes that
+  supported, except uri. Values of the attributes that
   are not defined in the schema or have unspecified types are treated as
   [EDN](https://en.wikipedia.org/wiki/Extensible_Data_Notation) blobs, and are
   de/serialized with [nippy](https://github.com/ptaoussanis/nippy).
@@ -684,6 +447,9 @@ are applicable to Datascript.
   attribute, its `:db/valueType` should be specified.
 
 * Floating point `NaN` cannot be stored.
+
+* Cannot store big integer beyond the range of `[-2^1015, 2^1015-1]`, the
+  unscaled value of big decimal has the same limit.
 
 * The maximum individual value size is 2GB. Limited by the maximum size of
   off-heap byte buffer that can be allocated in JVM.
